test/class/valid/constructOneField.wacc
begin
  class c is
    bool b;

    init(bool b) is
      self.b = b
    end
  end

  skip
end
