test/class/invalid/stupidConstructor.wacc
begin
  class stupid is
    char c;

    init(char c) is
      c = self.c;
      self.c = 'c'
    end
  end

  skip
end
